<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.android.inventory.MainActivity">

    <LinearLayout
        android:id="@+id/add_product_container_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        android:visibility="gone">

        <EditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name_edit_text_hint"/>

        <LinearLayout
            android:id="@+id/quantity_and_price_container_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/product_quantity_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/product_quantity_edit_text_hint"/>

            <EditText
                android:id="@+id/product_price_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:hint="@string/product_price_edit_text_hint"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/product_upload_image_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/quantity_and_price_container_layout"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/product_upload_image_button"/>

            <Button
                android:id="@+id/product_submit_to_database_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/quantity_and_price_container_layout"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:text="@string/product_submit_to_database_button"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/product_submit_to_database_button"
            android:layout_marginTop="24dp"
            android:background="#888888"/>
    </LinearLayout>

    <TextView
        android:id="@+id/default_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/instructions_to_user"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>
    <ImageView
        android:id="@+id/test_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
